# uni-dashboard

./: main.py  pyproject.toml  requirements.txt
app/: app.py
app/data/: feedback.parquet  teachers.parquet
app/pages/: 1_Overview.py  2_Faculties.py  3_Courses.py  3_Departments.py  3_Specialties.py  4_Courses.py  4_Teachers.py  5_Teachers.py  6_Comments.py  7_Data_Quality.py
app/src/: access.py  charts.py  loader.py  metrics.py  names.py  preprocessing.py  report.py  ui.py
