[project]
name = "uni-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fpdf2>=2.8.7",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.58.0",
]
