[project]
name = "uni-dashboard"
version = "0.1.0"
description = "Student post-semester survey dashboard (Streamlit demo)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pyarrow>=24.0.0",
    "streamlit>=1.58.0",
]
